--- a/trunk/config/setting.yml
+++ b/trunk/config/setting.yml
@@ -4,10 +4,10 @@ default: &defaults
   # 网站名称
   app_name: "Kejian.TV"
   # 页脚版权
-  foot_html: "Copyright © Zhaopin.com All Rights Reserved."
+  foot_html: "Copyright © Kejian.TV All Rights Reserved."
   # 网站的域名
-  domain: "wendaoqa.zhaopin.com"
-  apidomain: "api.zhaopin.com"
+  domain: "kejian.tv"
+  apidomain: "api.kejian.tv"
   # 配置图片的域名
   upload_url: "/uploads"
   # 设置管理员，在下面填写需要设置为管理员的用户 email
