--- a/trunk/Gemfile
+++ b/trunk/Gemfile
@@ -62,7 +62,7 @@ gem 'omniauth-facebook'
 gem 'omniauth-github'
 
 # 邀请系统
-gem 'devise_invitable'
+# gem 'devise_invitable'
 
 # 图片上传
 gem 'carrierwave', "0.5.3"
