--- a/trunk/config/mongod.conf
+++ b/trunk/config/mongod.conf
@@ -3,4 +3,6 @@ pidfilepath = /home/main/tmp/mongodb.pid
 logpath = /home/main/log/mongod.log
 fork = true
 logappend = true
-cpu = true
+
+profile = 1
+slowms = 100
