--- a/trunk/Gemfile
+++ b/trunk/Gemfile
@@ -157,7 +157,8 @@ gem 'rest-client'
 gem 'rails_autolink'
 
 
-gem 'pry-rails', :group => :development
+gem 'pry-rails'
+gem 'pry'
 
 gem 'inherited_resources'
 gem "oauth-plugin", ">= 0.4.0.pre1"
@@ -170,7 +171,6 @@ gem 'yajl-ruby'
 
 gem 'validate_url', '0.1.6'
 gem "redis-objects"
-gem 'pry'
 gem 'to_xls', '~> 1.0.0'
 
 gem 'sndacs'
