--- a/trunk/config/setting.yml
+++ b/trunk/config/setting.yml
@@ -41,8 +41,7 @@ default: &defaults
   user_qingqiu_id: 72
   course_qingqiu_id: 2116
   topic_qingqiu: '领域请求'
-  ktv_course_id: 1
-  ktv_courseware_id: 1
+  ktv_courseware_id: '500f9970e13823796a000002'
   ktv_domain: kejian.tv
   
   google_analytics_key: UA-28971136-1
