--- a/trunk/config/setting.yml
+++ b/trunk/config/setting.yml
@@ -43,6 +43,7 @@ default: &defaults
   topic_qingqiu: '领域请求'
   ktv_courseware_id: '500f9970e13823796a000002'
   ktv_domain: kejian.tv
+  root_topic_id: '501137a1e138236528000016'
   
   google_analytics_key: UA-28971136-1
   # Length of time to wait until a connection is opened in seconds
