添加staging运行模式，尝试修改topic的树状结构错误监测

--- a/trunk/config/mongoid.yml
+++ b/trunk/config/mongoid.yml
@@ -24,8 +24,11 @@ test:
   database: ktv_test
 
 # set these environment variables on your prod server
-production:
+production: &productions
   <<: *defaults
   host: '0.0.0.0'
   database: ktv
+
+staging:
+  <<: *productions
 
