--- a/trunk/Gemfile
+++ b/trunk/Gemfile
@@ -1,5 +1,5 @@
-source 'http://ruby.taobao.org/'
-# source 'https://rubygems.org'
+# source 'http://ruby.taobao.org/'
+source 'https://rubygems.org'
 
 gem 'rails', '3.2.6'
 
@@ -182,3 +182,7 @@ gem 'mechanize', '>=2.5.1'
 
 gem "omnicontacts"
 gem 'thin'
+
+
+gem 'selenium-webdriver'
+gem 'debugger'
