oauth 都可以用了

--- a/trunk/Gemfile
+++ b/trunk/Gemfile
@@ -50,9 +50,10 @@ gem 'chinese_pinyin'
 gem 'rmmseg-cpp-huacnlee'
 
 # 用户系统
-# 这个必须锁定版本！！我们定制的太多了
+# 这个devise必须锁定版本！！我们定制的太多了
 gem 'devise','2.1.0'
-gem "omniauth-weibo", :git => 'git://github.com/pmq20/omniauth-weibo.git'
+gem 'omniauth-weibo-oauth2'
+#gem "omniauth-weibo", :git => 'git://github.com/pmq20/omniauth-weibo.git'
 gem "omniauth-renren", :git => 'git://github.com/pmq20/omniauth-renren.git'
 gem "omniauth-douban", :git => 'git://github.com/pmq20/omniauth-douban.git'
 gem "omniauth-qq", :git => 'git://github.com/pmq20/omniauth-qq.git'
@@ -151,7 +152,6 @@ gem 'progressbar'
 gem 'unicorn'
 gem 'therubyracer', :platforms => :ruby
 
-gem 'mobile-fu'
 gem 'savon'
 gem 'rest-client'
 gem 'rails_autolink'
