--- a/trunk/Gemfile
+++ b/trunk/Gemfile
@@ -1,5 +1,5 @@
-# source 'http://ruby.taobao.org/'
-source 'https://rubygems.org'
+source 'http://ruby.taobao.org/'
+#source 'https://rubygems.org'
 
 gem 'rails', '3.2.6'
 
@@ -186,3 +186,4 @@ gem 'thin'
 
 gem 'selenium-webdriver'
 #gem 'debugger'
+gem 'useragent'
