--- a/trunk/config/redis1.conf
+++ b/trunk/config/redis1.conf
@@ -163,7 +163,7 @@ slave-serve-stale-data yes
 # 150k passwords per second against a good box. This means that you should
 # use a very strong password otherwise it will be very easy to break.
 #
-# requirepass foobared
+requirepass 87dsFDLKJ7^*$@#_Dn1..d0983DKOI892617jKLKLKDFJ;;dskojifdsouitreo09w
 
 # Command renaming.
 #
