--- a/trunk/config/redis3.conf
+++ b/trunk/config/redis3.conf
@@ -164,6 +164,7 @@ slave-serve-stale-data yes
 # use a very strong password otherwise it will be very easy to break.
 #
 # requirepass foobared
+requirepass 87dsFDLKJ7^*$@#_Dn1..d0983DKOI892617jKLKLKDFJ;;dskojifdsouitreo09w
 
 # Command renaming.
 #
