--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ tmp/
 log/
 /uc/data/
 /simple/simple/data/
+/simple/simple/uc_client/data/
 /win/ConvertPowerPoint2PDF/ConvertPowerPoint2PDF/bin/
 /win/ConvertPowerPoint2PDF/ConvertPowerPoint2PDF/obj/
 /win/ConvertWord2PDF/ConvertWord2PDF/bin/
