--- a/trunk/config/setting.yml
+++ b/trunk/config/setting.yml
@@ -60,6 +60,7 @@ default: &defaults
   # 时间太长会超时。所以控制一下。
   mechanize_per_page: 88
   cnu_domain: 'cnu.kejian.tv'
+  dz_authkey: 'c6a6aasakLbbc0i1'
   proxy:
   # 不使用代理的时候把下面四行注释掉，但是上面这行保留。
      # addr: 192.168.20.6
