--- a/trunk/config/setting.yml
+++ b/trunk/config/setting.yml
@@ -61,6 +61,7 @@ default: &defaults
   mechanize_per_page: 88
   cnu_domain: 'cnu.kejian.tv'
   dz_authkey: 'c6a6aasakLbbc0i1'
+  special_agent: 'PSVR_SPECIAL_AGENT_3787fdjihf328DFShze2dfskm894ebkjGFDY'
   proxy:
   # 不使用代理的时候把下面四行注释掉，但是上面这行保留。
      # addr: 192.168.20.6
