上传头像的上传按钮的CSS。方便在mac上使用的一些修改。这次Commit是为了merge

--- a/trunk/config/mongod.conf
+++ b/trunk/config/mongod.conf
@@ -1,6 +1,6 @@
 dbpath = /mongodata
-pidfilepath = /home/main/tmp/mongodb.pid
-logpath = /home/main/log/mongod.log
+pidfilepath = ~/tmp/mongodb.pid
+logpath = log/mongod.log
 fork = true
 logappend = true
 
