--- a/sub/Gemfile
+++ b/sub/Gemfile
@@ -1,12 +1,14 @@
-source 'https://rubygems.org'
+source 'http://ruby.taobao.org/'
+#source 'https://rubygems.org'
 
 gem 'rails', '3.2.8'
+
 
 # Bundle edge Rails instead:
 # gem 'rails', :git => 'git://github.com/rails/rails.git'
 
 gem 'mysql2'
-
+gem "mongoid", "~> 3.0.0"
 
 # Gems used only for assets and not required
 # in production environments by default.
