--- a/sub/config/database.yml
+++ b/sub/config/database.yml
@@ -12,10 +12,10 @@ development:
   adapter: mysql2
   encoding: utf8
   reconnect: false
-  database: fjkdlkj_development
+  database: ktv_sub
   pool: 5
   username: root
-  password:
+  password: "jknlff8-pro-17m7755"
   socket: /tmp/mysql.sock
 
 # Warning: The database defined as "test" will be erased and
@@ -25,18 +25,18 @@ test:
   adapter: mysql2
   encoding: utf8
   reconnect: false
-  database: fjkdlkj_test
+  database: ktv_sub_test
   pool: 5
   username: root
-  password:
+  password: "jknlff8-pro-17m7755"
   socket: /tmp/mysql.sock
 
 production:
   adapter: mysql2
   encoding: utf8
   reconnect: false
-  database: fjkdlkj_production
+  database: ktv_sub
   pool: 5
   username: root
-  password:
+  password: "jknlff8-pro-17m7755"
   socket: /tmp/mysql.sock
