线下艰难调试DZ

--- a/trunk/Gemfile
+++ b/trunk/Gemfile
@@ -94,7 +94,7 @@ gem 'settingslogic'
 # gem 'smurf-huacnlee', :require => "smurf"
 
 # 表单
-gem 'simple_form'
+# gem 'simple_form'
 
 # 缓存管理
 gem 'tagged-cache' #[!]
