老师的问题搞定

--- a/sub/config/database.yml
+++ b/sub/config/database.yml
@@ -31,7 +31,7 @@ test:
   password: "jknlff8-pro-17m7755"
   socket: /tmp/mysql.sock
 
-production:
+production: &production
   adapter: mysql2
   encoding: utf8
   reconnect: false
@@ -40,3 +40,6 @@ production:
   username: root
   password: "jknlff8-pro-17m7755"
   socket: /tmp/mysql.sock
+
+staging:
+  <<: *production
