--- a/sub/config/database.yml
+++ b/sub/config/database.yml
@@ -43,3 +43,14 @@ production: &production
 
 staging:
   <<: *production
+
+psvr_ucenter:
+  adapter: mysql2
+  encoding: utf8
+  reconnect: false
+  database: ucenter
+  pool: 5
+  username: root
+  password: "jknlff8-pro-17m7755"
+  socket: /tmp/mysql.sock
+
