--- a/sub/config/redis.yml
+++ b/sub/config/redis.yml
@@ -42,3 +42,24 @@ production:
   
 staging:
   <<: *defaults
+
+sub_cnu:
+  <<: *productions
+  port: 6380
+  port_search: 6380
+  port_resque: 6380
+  port_users: 6380
+  port_topics: 6380
+  port_asks: 6380
+  port_experts: 6380
+
+sub_ustb:
+  <<: *productions
+  port: 6381
+  port_search: 6381
+  port_resque: 6381
+  port_users: 6381
+  port_topics: 6381
+  port_asks: 6381
+  port_experts: 6381
+
