--- a/sub/config/setting.yml
+++ b/sub/config/setting.yml
@@ -27,8 +27,6 @@ default: &defaults
   answer_spam_max: 8
   google_analytics_id: "UA-22413508-1"
   spam_words: /敏感词1|敏感词2/
-  zhaopin_login: "http://wendaoqa.kejian.tv/newbie?from="#"http://my.kejian.tv/loginmgr/login.asp?BkUrl="
-  zhaopin_logout: "http://my.kejian.tv/loginmgr/logout.asp"
   wendao_domain_name: "kejian.tv"
   error_tracker_url: 'http://etsrv.dev.kejian.tv/ErrorTrackerRestfulImpl.svc/adderrorlog'
   error_tracker_enabled: false
@@ -60,9 +58,11 @@ default: &defaults
   # 每页读取多少条记录？这个影响到打开这个页面的速度，
   # 时间太长会超时。所以控制一下。
   mechanize_per_page: 88
-  cnu_domain: 'cnu.kejian.tv'
   dz_authkey: '0b7310esiKtBIrpX'
   special_agent: 'PSVR_SPECIAL_AGENT_3787fdjihf328DFShze2dfskm894ebkjGFDY'
+  ktv_subdomain: 'cnu.kejian.tv'
+  dz_cookiepre: '6tce_'
+  dz_cookiepath: '/'
   proxy:
   # 不使用代理的时候把下面四行注释掉，但是上面这行保留。
      # addr: 192.168.20.6
@@ -76,7 +76,6 @@ development:
   wendao_domain_name: "kejian.lvh.me"
   ktv_simple_domain: "kejian.lvh.me/simple"
   ktv_search_domain: "search.kejian.lvh.me"
-  cnu_domain: 'cnu.kejian.lvh.me'
   # open_timeout: 1
   # timeout: 1
   read_timeout: 30
@@ -91,7 +90,7 @@ test:
   open_timeout: 50
   timeout: 50
   
-production:
+production: &production
   <<: *defaults
 
 staging:
@@ -103,3 +102,70 @@ staging:
   open_timeout: 30
   timeout: 30
 
+sub_cnu:
+  <<: *productions
+  official_website: 'http://www.cnu.edu.cn/'
+  ktv_sub: 'cnu'
+  ktv_subname: '首都师范大学'
+  ktv_subname_short: '首师大'
+  ktv_subdomain: 'cnu.kejian.tv'
+  dz_cookiepre: '6tce_'
+  dz_cookiepath: '/'
+  fotos:
+    - 阳光明媚的校本部校门
+    - 乌云密布的北一区校门
+    - 某次零九级新老生交流会
+    - 良乡校区图书馆外
+    - 北一区体育馆的二楼乒乓球室
+    - 教二楼讨论班小教室
+    - 丁浩刚老师在基础物理课上
+    - 教二楼一楼阶梯教室的讲台
+    - 某次学生会手工厨艺DIY
+    - 在北一区文科楼的大阶梯教室上心理学与生活课
+    - 数学科学学院张利友教授的板书
+    - 王志老师在教四楼上大学英语课
+    - 张英伯老师在教二楼上代数课
+    - 刘春晓老师在等待上课铃响
+  school_new:
+    - 2012
+    - 9
+    - 3
+  school_exam:
+    - 2013
+    - 1
+    - 7
+  school_over:
+    - 2013
+    - 1
+    - 19
+    
+sub_ibeike:
+  <<: *productions
+  official_website: 'http://www.ustb.edu.cn/'
+  ktv_sub: 'ustb'
+  ktv_subname: '北京科技大学'
+  ktv_subname_short: '北科大'
+  ktv_subdomain: 'ibeike.kejian.tv'
+  dz_cookiepre: 'fes2_'
+  dz_cookiepath: '/'
+  fotos:
+    - 阳光明媚的北科西校门
+    - 沧桑的雪中北科西校门
+    - 主楼前的花坛
+    - 理化楼的一角
+    - 体育场栅栏外的黄昏
+    - 夕阳下的宿舍楼
+    - 图书馆与众志成城石头
+  school_new:
+    - 2012
+    - 9
+    - 10
+  school_exam:
+    - 2013
+    - 1
+    - 7
+  school_over:
+    - 2013
+    - 1
+    - 21
+    
