--- a/trunk/config/httpd.conf
+++ b/trunk/config/httpd.conf
@@ -132,7 +132,7 @@ MaxRequestsPerChild  0
 # prevent Apache from glomming onto all bound IP addresses.
 #
 #Listen 12.34.56.78:80
-Listen 8080
+Listen 80
 
 #
 # Dynamic Shared Object (DSO) Support
@@ -212,6 +212,7 @@ LoadModule version_module modules/mod_version.so
 #LoadModule ident_module modules/mod_ident.so
 #LoadModule log_forensic_module modules/mod_log_forensic.so
 #LoadModule unique_id_module modules/mod_unique_id.so
+LoadModule php5_module        /usr/lib64/httpd/modules/libphp5.so
 #
 
 #
@@ -272,7 +273,7 @@ ServerAdmin root@localhost
 # You will have to access it by its address anyway, and this will make 
 # redirections work in a sensible way.
 #
-ServerName 221.174.24.96
+#ServerName www.example.com:80
 
 #
 # UseCanonicalName: Determines how Apache constructs self-referencing 
@@ -302,7 +303,6 @@ DocumentRoot "/var/www/html"
     Options FollowSymLinks
     AllowOverride None
 </Directory>
-
 
 #
 # Note that from this point forward you must specifically allow
@@ -987,7 +987,7 @@ BrowserMatch "^Dreamweaver-WebDAV-SCM1" redirect-carefully
 #
 # Use name-based virtual hosting.
 #
-NameVirtualHost *:8080
+#NameVirtualHost *:80
 #
 # NOTE: NameVirtualHost cannot be used without a port specifier 
 # (e.g. :80) if mod_ssl is being used, due to the nature of the
@@ -1000,45 +1000,10 @@ NameVirtualHost *:8080
 # The first VirtualHost section is used for requests without a known
 # server name.
 #
-<VirtualHost *:8080>
-    ServerAdmin pmq2001@gmail.com
-    DocumentRoot "/var/www/html"
-    ServerName 221.174.24.96
-</VirtualHost>
-<VirtualHost *:8080>
-    ServerAdmin pmq2001@gmail.com
-    ServerName ktv-pms.kejian.tv
-    ServerAlias ktv-bugfree.kejian.tv
-    DocumentRoot "/home/wwwroot/bugfree"
-    ErrorLog /home/main/log/pms-error.log
-    CustomLog /home/main/log/pms-access.log common
-</VirtualHost>
-<VirtualHost *:8080>
-    ServerAdmin pmq2001@gmail.com
-    ServerName ktv-bbs.kejian.tv
-    DocumentRoot "/home/wwwroot/bbs"
-    ErrorLog /home/main/log/bbs-error.log
-    CustomLog /home/main/log/bbs-access.log common
-</VirtualHost>
-<VirtualHost *:8080>
-    ServerAdmin pmq2001@gmail.com
-    ServerName ktv1.kejian.tv
-    DocumentRoot "/usr/share/phpMyAdmin"
-    ErrorLog /home/main/log/ktv1-error.log
-    CustomLog /home/main/log/ktv1-access.log common
-</VirtualHost>
-<VirtualHost *:8080>
-    ServerAdmin pmq2001@gmail.com
-    ServerName ktv2.kejian.tv
-    DocumentRoot "/usr/share/phpPgAdmin"
-    ErrorLog /home/main/log/ktv2-error.log
-    CustomLog /home/main/log/ktv2-access.log common
-</VirtualHost>
-<VirtualHost *:8080>
-    ServerAdmin pmq2001@gmail.com
-    ServerName blog.kejian.tv
-    DocumentRoot "/home/wwwroot/wordpress"
-    ErrorLog /home/main/log/wordpress-error.log
-    CustomLog /home/main/log/wordpress-access.log common
-</VirtualHost>
-
+#<VirtualHost *:80>
+#    ServerAdmin webmaster@dummy-host.example.com
+#    DocumentRoot /www/docs/dummy-host.example.com
+#    ServerName dummy-host.example.com
+#    ErrorLog logs/dummy-host.example.com-error_log
+#    CustomLog logs/dummy-host.example.com-access_log common
+#</VirtualHost>
