每个子站都是一个环境，nginx进一步配置，吃饭回来搞多子站

--- a/sub/config/mongoid.yml
+++ b/sub/config/mongoid.yml
@@ -17,19 +17,16 @@ test:
   database: ktv_test
 
 # set these environment variables on your prod server
-production: &productions
+production: &production
   <<: *defaults
   host: '0.0.0.0'
   database: ktv_sub
 
-staging:
-  <<: *productions
-
 sub_cnu:
-  <<: *productions
+  <<: *production
   database: ktv_sub_cnu
   
 sub_ustb:
-  <<: *productions
+  <<: *production
   database: ktv_sub_ustb
   
