--- a/trunk/config/nginx.conf
+++ b/trunk/config/nginx.conf
@@ -103,18 +103,34 @@ http {
     access_log /dev/null;
     error_log /dev/null;
   }
+
+  #server {
+  #  listen 80;
+  #  server_name ktv-bbs.kejian.tv ktv-pms.kejian.tv blog.kejian.tv uc.kejian.tv;
+  #  location /{
+  #    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+  #    proxy_set_header X-Forwarded-Proto $scheme;
+  #    proxy_set_header Host $http_host;
+  #    proxy_redirect off;
+  #    proxy_pass http://ktv_apache;
+  #  }
+  #}
+
   server {
     listen 80;
-    server_name ktv-bbs.kejian.tv ktv-pms.kejian.tv blog.kejian.tv uc.kejian.tv;
-    location /{
-      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-      proxy_set_header X-Forwarded-Proto $scheme;
-      proxy_set_header Host $http_host;
-      proxy_redirect off;
-      proxy_pass http://ktv_apache;
+    server_name uc.kejian.tv;
+    root /home/main/ktv/uc;
+    try_files $uri =404;
+    location ~ (.*\.php$)|(^/$) {
+      include /usr/local/nginx/conf/fastcgi_params;
+      fastcgi_pass unix:/web/php-fpm.sock;
+      fastcgi_index index.php;
+      fastcgi_param SCRIPT_FILENAME /home/main/ktv/uc$fastcgi_script_name;
+      fastcgi_param PATH_INFO $fastcgi_script_name;
+      limit_req zone=one burst=20;
     }
+    error_page 500 502 503 504 /maintenance.html;
   }
-
   server {
     listen 80;
     server_name cnu.kejian.tv;
@@ -128,7 +144,13 @@ http {
       proxy_pass http://ktv_sub_cnu;
       limit_req zone=one burst=20;
     }
-    location ~ /simple/.*\.php$ {
+    location = /simple {
+      rewrite ^(.*) / permanent;
+    }
+    location = /simple/ {
+      rewrite ^(.*) / permanent;
+    }
+    location ~ ^/simple/.*\.php$ {
       include /usr/local/nginx/conf/fastcgi_params;
       fastcgi_pass unix:/web/php-fpm.sock;
       fastcgi_index index.php;
@@ -136,7 +158,7 @@ http {
       fastcgi_param PATH_INFO $fastcgi_script_name;
       limit_req zone=one burst=20;
     }
-    error_page 404 500 502 503 504 /maintenance.html;
+    error_page 500 502 503 504 /maintenance.html;
   }
 
   server {
@@ -160,7 +182,7 @@ http {
       proxy_pass http://ktv_apache;
       limit_req zone=one burst=20;
     }
-    error_page 404 500 502 503 504 /maintenance.html;
+    error_page 500 502 503 504 /maintenance.html;
   }
   server {
     listen 80;
@@ -177,7 +199,7 @@ http {
       proxy_pass http://ktv_server_staging;
       limit_req zone=one burst=888;
     }
-    error_page 404 500 502 503 504 /maintenance.html;
+    error_page 500 502 503 504 /maintenance.html;
   }
 # -- back-safe servers --
   #server {
