so much for now

--- a/trunk/config/nginx.conf
+++ b/trunk/config/nginx.conf
@@ -52,11 +52,12 @@ http {
   }
   upstream ktv_sub_cnu{
     server 0.0.0.0:3000 fail_timeout=0;
-    #server unix:/web/ktv_sub.sock fail_timeout=0;
   }
-  upstream ktv_sub_ustb{
+  upstream ktv_sub_ibeike{
     server 0.0.0.0:3001 fail_timeout=0;
-    #server unix:/web/ktv_sub.sock fail_timeout=0;
+  }
+  upstream ktv_sub_cas{
+    server 0.0.0.0:3002 fail_timeout=0;
   }
 
   server {
@@ -72,15 +73,20 @@ http {
   }
   server {
     listen 80 default_server;
-    server_name ktv1.kejian.tv ktv2.kejian.tv;
+    server_name ktv1.kejian.tv;
+    root /home/wwwroot/phpMyAdmin;
+    try_files $uri =404;
     auth_basic "This is a critical place.";
     auth_basic_user_file /home/main/htpasswd;
-    location /{
-      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-      proxy_set_header X-Forwarded-Proto $scheme;
-      proxy_set_header Host $http_host;
-      proxy_redirect off;
-      proxy_pass http://ktv_apache;
+    location ~ (.*\.php$)|(^/$) {
+      include /usr/local/nginx/conf/fastcgi_params;
+      if (-f $request_filename) {
+        fastcgi_pass unix:/web/php-fpm.sock;
+      }
+      fastcgi_index index.php;
+      fastcgi_param SCRIPT_FILENAME /home/wwwroot/phpMyAdmin$fastcgi_script_name;
+      fastcgi_param PATH_INFO $fastcgi_script_name;
+      limit_req zone=one burst=20;
     }
   }
   server {
@@ -123,7 +129,9 @@ http {
     try_files $uri =404;
     location ~ (.*\.php$)|(^/$) {
       include /usr/local/nginx/conf/fastcgi_params;
-      fastcgi_pass unix:/web/php-fpm.sock;
+      if (-f $request_filename) {
+        fastcgi_pass unix:/web/php-fpm.sock;
+      }
       fastcgi_index index.php;
       fastcgi_param SCRIPT_FILENAME /home/main/ktv/uc$fastcgi_script_name;
       fastcgi_param PATH_INFO $fastcgi_script_name;
@@ -145,14 +153,78 @@ http {
       limit_req zone=one burst=20;
     }
     location = /simple {
-      rewrite ^(.*) / permanent;
+      rewrite ^(.*) /simple/index.php  permanent;
     }
     location = /simple/ {
-      rewrite ^(.*) / permanent;
+      rewrite ^(.*) /simple/index.php  permanent;
     }
     location ~ ^/simple/.*\.php$ {
       include /usr/local/nginx/conf/fastcgi_params;
-      fastcgi_pass unix:/web/php-fpm.sock;
+      if (-f $request_filename) {
+        fastcgi_pass unix:/web/php-fpm.sock;
+      }
+      fastcgi_index index.php;
+      fastcgi_param SCRIPT_FILENAME /home/main/ktv/sub/simple$fastcgi_script_name;
+      fastcgi_param PATH_INFO $fastcgi_script_name;
+      limit_req zone=one burst=20;
+    }
+    error_page 500 502 503 504 /maintenance.html;
+  }
+  server {
+    listen 80;
+    server_name ibeike.kejian.tv;
+    root /home/main/ktv/sub/simple;
+    try_files $uri @app;
+    location @app {
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
+      proxy_set_header Host $http_host;
+      proxy_redirect off;
+      proxy_pass http://ktv_sub_ibeike;
+      limit_req zone=one burst=20;
+    }
+    location = /simple {
+      rewrite ^(.*) /simple/index.php permanent;
+    }
+    location = /simple/ {
+      rewrite ^(.*) /simple/index.php permanent;
+    }
+    location ~ ^/simple/.*\.php$ {
+      include /usr/local/nginx/conf/fastcgi_params;
+      if (-f $request_filename) {
+        fastcgi_pass unix:/web/php-fpm.sock;
+      }
+      fastcgi_index index.php;
+      fastcgi_param SCRIPT_FILENAME /home/main/ktv/sub/simple$fastcgi_script_name;
+      fastcgi_param PATH_INFO $fastcgi_script_name;
+      limit_req zone=one burst=20;
+    }
+    error_page 500 502 503 504 /maintenance.html;
+  }
+  server {
+    listen 80;
+    server_name cas.kejian.tv;
+    root /home/main/ktv/sub/simple;
+    try_files $uri @app;
+    location @app {
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
+      proxy_set_header Host $http_host;
+      proxy_redirect off;
+      proxy_pass http://ktv_sub_cas;
+      limit_req zone=one burst=20;
+    }
+    location = /simple {
+      rewrite ^(.*) /simple/index.php permanent;
+    }
+    location = /simple/ {
+      rewrite ^(.*) /simple/index.php permanent;
+    }
+    location ~ ^/simple/.*\.php$ {
+      include /usr/local/nginx/conf/fastcgi_params;
+      if (-f $request_filename) {
+        fastcgi_pass unix:/web/php-fpm.sock;
+      }
       fastcgi_index index.php;
       fastcgi_param SCRIPT_FILENAME /home/main/ktv/sub/simple$fastcgi_script_name;
       fastcgi_param PATH_INFO $fastcgi_script_name;
