--- a/sub/config/redis.yml
+++ b/sub/config/redis.yml
@@ -27,6 +27,10 @@ defaults: &defaults
   port_experts: 6380
   select_experts: '6'
   
+  host_courses: '127.0.0.1'
+  port_courses: 6380
+  select_courses: '7'
+  
 development:
   <<: *defaults
   port: 6379
@@ -36,11 +40,12 @@ development:
   port_topics: 6379
   port_asks: 6379
   port_experts: 6379
+  port_courses: 6379
   
 production: &production
   <<: *defaults
   
-sub_cnu:
+sub_cnu: &sub_cnu
   <<: *production
   port: 6380
   port_search: 6380
@@ -49,8 +54,12 @@ sub_cnu:
   port_topics: 6380
   port_asks: 6380
   port_experts: 6380
+  port_courses: 6380
+sub_cnu_dev:
+  <<: *sub_cnu
 
-sub_ibeike:
+
+sub_ibeike: &sub_ibeike
   <<: *production
   port: 6381
   port_search: 6381
@@ -59,4 +68,6 @@ sub_ibeike:
   port_topics: 6381
   port_asks: 6381
   port_experts: 6381
-
+  port_courses: 6381
+sub_ibeike_dev:
+  <<: *sub_ibeike
