数个线上修复和一键建立子站脚本的书写

--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,9 @@ log/
 /win/ConvertWord2PDF/ConvertWord2PDF/obj/
 _assets/
 _assets_old/
+_assets_uploading/
 quora.out
+
 
 git_sensitive*
 **.orig
