--- a/trunk/config/nginx.conf
+++ b/trunk/config/nginx.conf
@@ -41,35 +41,20 @@ http {
   upstream ktv_server{
     server unix:/web/ktv.sock fail_timeout=0;
   }
-  upstream ktv_apache{
-    server 0.0.0.0:8080 fail_timeout=0;
-  }
   upstream ktv_server_staging{
     server unix:/web/ktv_staging.sock fail_timeout=0;
   }
-  upstream ofpsvr_core{
-    server 0.0.0.0:8901 fail_timeout=0;
-  }
   upstream ktv_sub_cnu{
-    server 0.0.0.0:3000 fail_timeout=0;
+    server unix:/web/ktv_sub_cnu.sock fail_timeout=0;
   }
   upstream ktv_sub_ibeike{
-    server 0.0.0.0:3001 fail_timeout=0;
+    server unix:/web/ktv_sub_ibeike.sock fail_timeout=0;
   }
   upstream ktv_sub_cas{
-    server 0.0.0.0:3002 fail_timeout=0;
+    server unix:/web/ktv_sub_cas.sock fail_timeout=0;
   }
-
-  server {
-    listen 80;
-    server_name ofpsvr.org blog.ofpsvr.org www.ofpsvr.org;
-    location /{
-      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-      proxy_set_header X-Forwarded-Proto $scheme;
-      proxy_set_header Host $http_host;
-      proxy_redirect off;
-      proxy_pass http://ofpsvr_core;
-    }
+  upstream ktv_sub_buaa{
+    server unix:/web/ktv_sub_buaa.sock fail_timeout=0;
   }
   server {
     listen 80 default_server;
@@ -78,7 +63,10 @@ http {
     try_files $uri =404;
     auth_basic "This is a critical place.";
     auth_basic_user_file /home/main/htpasswd;
-    location ~ (.*\.php$)|(^/$) {
+    location = /{
+      rewrite ^(.*) /index.php permanent;
+    }
+    location ~ .*\.php$ {
       include /usr/local/nginx/conf/fastcgi_params;
       if (-f $request_filename) {
         fastcgi_pass unix:/web/php-fpm.sock;
@@ -99,20 +87,10 @@ http {
     access_log /dev/null;
     error_log /dev/null;
   }
-  server {
-    listen 80;
-    server_name search.kejian.tv;
-    rewrite ^(.*) http://kejian.tv/simple/search.php redirect;
-    location ~ \.(php|html)$ {
-      deny  all;
-    }
-    access_log /dev/null;
-    error_log /dev/null;
-  }
 
   #server {
   #  listen 80;
-  #  server_name ktv-bbs.kejian.tv ktv-pms.kejian.tv blog.kejian.tv uc.kejian.tv;
+  #  server_name ktv-bbs.kejian.tv ktv-pms.kejian.tv blog.kejian.tv;
   #  location /{
   #    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
   #    proxy_set_header X-Forwarded-Proto $scheme;
@@ -127,7 +105,10 @@ http {
     server_name uc.kejian.tv;
     root /home/main/ktv/uc;
     try_files $uri =404;
-    location ~ (.*\.php$)|(^/$) {
+    location = /{
+      rewrite ^(.*) /index.php permanent;
+    }
+    location ~ .*\.php$ {
       include /usr/local/nginx/conf/fastcgi_params;
       if (-f $request_filename) {
         fastcgi_pass unix:/web/php-fpm.sock;
@@ -167,6 +148,11 @@ http {
       fastcgi_param SCRIPT_FILENAME /home/main/ktv/sub/simple$fastcgi_script_name;
       fastcgi_param PATH_INFO $fastcgi_script_name;
       limit_req zone=one burst=20;
+      location ~ ^/simple/install/.*$ {
+        auth_basic "This is a critical place.";
+        auth_basic_user_file /home/main/htpasswd;
+        fastcgi_pass unix:/web/php-fpm.sock;
+      }
     }
     error_page 500 502 503 504 /maintenance.html;
   }
@@ -198,12 +184,17 @@ http {
       fastcgi_param SCRIPT_FILENAME /home/main/ktv/sub/simple$fastcgi_script_name;
       fastcgi_param PATH_INFO $fastcgi_script_name;
       limit_req zone=one burst=20;
+      location ~ ^/simple/install/.*$ {
+        auth_basic "This is a critical place.";
+        auth_basic_user_file /home/main/htpasswd;
+        fastcgi_pass unix:/web/php-fpm.sock;
+      }
     }
     error_page 500 502 503 504 /maintenance.html;
   }
   server {
     listen 80;
-    server_name cas.kejian.tv;
+    server_name buaa.kejian.tv;
     root /home/main/ktv/sub/simple;
     try_files $uri @app;
     location @app {
@@ -211,7 +202,7 @@ http {
       proxy_set_header X-Forwarded-Proto $scheme;
       proxy_set_header Host $http_host;
       proxy_redirect off;
-      proxy_pass http://ktv_sub_cas;
+      proxy_pass http://ktv_sub_buaa;
       limit_req zone=one burst=20;
     }
     location = /simple {
@@ -229,13 +220,17 @@ http {
       fastcgi_param SCRIPT_FILENAME /home/main/ktv/sub/simple$fastcgi_script_name;
       fastcgi_param PATH_INFO $fastcgi_script_name;
       limit_req zone=one burst=20;
+      location ~ ^/simple/install/.*$ {
+        auth_basic "This is a critical place.";
+        auth_basic_user_file /home/main/htpasswd;
+        fastcgi_pass unix:/web/php-fpm.sock;
+      }
     }
     error_page 500 502 503 504 /maintenance.html;
   }
-
   server {
     listen 80;
-    server_name *.kejian.tv kejian.tv motioncasts.com *.motioncasts.com;
+    server_name *.kejian.tv kejian.tv;
     root /home/main/ktv/trunk/public;
     try_files $uri @app;
     location @app {
@@ -244,14 +239,6 @@ http {
       proxy_set_header Host $http_host;
       proxy_redirect off;
       proxy_pass http://ktv_server;
-      limit_req zone=one burst=20;
-    }
-    location /simple {
-      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-      proxy_set_header X-Forwarded-Proto $scheme;
-      proxy_set_header Host $http_host;
-      proxy_redirect off;
-      proxy_pass http://ktv_apache;
       limit_req zone=one burst=20;
     }
     error_page 500 502 503 504 /maintenance.html;
