线上开发：css混合第一波

--- a/sub/config/mongoid.yml
+++ b/sub/config/mongoid.yml
@@ -19,6 +19,8 @@ sub_ibeike: &sub_ibeike
 sub_ibeike_dev:
   <<: *sub_ibeike
   
-sub_buaa:
+sub_buaa: &sub_buaa
   <<: *defaults
   database: ktv_sub_buaa
+sub_buaa_dev:
+  <<: *sub_buaa
