--- a/sub/config/database.yml
+++ b/sub/config/database.yml
@@ -43,7 +43,7 @@ sub_ibeike: &sub_ibeike
 sub_ibeike_dev:
   <<: *sub_ibeike
 
-sub_buaa:
+sub_buaa: &sub_buaa
   adapter: mysql2
   encoding: utf8
   reconnect: false
@@ -52,3 +52,5 @@ sub_buaa:
   username: root
   password: "jknlff8-pro-17m7755"
   socket: /tmp/mysql.sock
+sub_buaa_dev:
+  <<: *sub_buaa
