首页的头部显示正常。热门搜素还要做。

--- a/trunk/Gemfile
+++ b/trunk/Gemfile
@@ -145,7 +145,7 @@ group :test do
   # gem 'database_cleaner'
 end
 
-
+gem 'php_serialize'
 gem 'nokogiri'
 gem 'redis-objects' #[!]
 gem 'progressbar'
