课程栏目合并，更好看的全部课程页面

--- a/sub/config/setting.yml
+++ b/sub/config/setting.yml
@@ -79,6 +79,21 @@ sub_cnu: &sub_cnu
   ktv_subname: '首都师范大学'
   ktv_subname_short: '首师大'
   ktv_subdomain: 'cnu.kejian.tv'
+  jie_length: 40
+  jie:
+    - '8:00'
+    - '8:50'
+    - '9:50'
+    - '10:40'
+    - '11:30'
+    - '13:30'
+    - '14:20'
+    - '15:10'
+    - '16:00'
+    - '16:50'
+    - '18:30'
+    - '19:20'
+    - '20:10'
   fotos:
     - 阳光明媚的校本部校门
     - 乌云密布的北一区校门
